Fixed whitespace at top of page.

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
     background-color: slategray;
     color: white;
     gap: 15px;
+    margin: 0px;
 }
 
 .grid {
